<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="pl.infinitefuture.readme.completedbook.CompletedBookDetailViewModel" />
    </data>


    <ScrollView
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/book_detail_you_have_read_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/book_detail_pages_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@{String.format(@string/you_have_read, viewmodel.readPages.get()), default=`You have read 300 pages`}"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.205"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <View
                android:id="@+id/divider_1"
                style="@style/Divider"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_detail_you_have_read_layout" />

            <LinearLayout
                android:id="@+id/book_detail_info_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_1">

                <LinearLayout
                    android:id="@+id/book_detail_info_title_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/info_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:tint="@color/colorAccent"
                        app:srcCompat="@drawable/ic_info_outline_black_24dp" />

                    <TextView
                        android:id="@+id/book_detail_info_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/information"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.205"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/book_detail_info_details_startdate_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/book_detail_info_startdate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/start_date"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/book_detail_info_startdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@{viewmodel.book.startDate, default=`25-10-2017`}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/book_detail_info_details_completedate_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/book_detail_info_completedate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/complete_date"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/book_detail_info_completedate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@{viewmodel.book.completeDate, default=`25-10-2017`}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/book_detail_info_details_tempo_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/book_detail_info_tempo_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/average_tempo"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/book_detail_info_tempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@{viewmodel.readingTempo + ` ` + @string/pages_per_day, default=`28 pages per day`}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider_3"
                style="@style/Divider"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_detail_info_layout" />

            <LinearLayout
                android:id="@+id/book_detail_sessions_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_3">

                <LinearLayout
                    android:id="@+id/book_detail_sessions_title_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/history_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:tint="@color/colorAccent"
                        app:srcCompat="@drawable/ic_history_black_24dp" />

                    <TextView
                        android:id="@+id/book_detail_sessions_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/last_sessions"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <pl.infinitefuture.readme.NonScrollListView
                    android:id="@+id/sessions_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#00000000"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:listSelector="@android:color/transparent"
                    android:visibility="@{viewmodel.emptySessions ? View.GONE : View.VISIBLE}"
                    app:sessions="@{viewmodel.lastSessions}" />

                <TextView
                    android:id="@+id/no_sessions_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/no_sessions"
                    android:textSize="16sp"
                    android:visibility="@{viewmodel.emptySessions ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/full_history_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:onClick="@{viewmodel.showFullSessionsHistory}"
                    android:text="@string/full_history"
                    android:textSize="14sp"
                    android:visibility="@{viewmodel.emptySessions ? View.GONE : View.VISIBLE}" />


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</layout>
