<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="pl.infinitefuture.reading.addeditbook.AddEditBookViewModel" />
    </data>

    <pl.infinitefuture.reading.ScrollChildSwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:enabled="@{viewmodel.dataLoading}"
        app:refreshing="@{viewmodel.dataLoading}">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_book_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_book_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_title_black_24dp"
                        android:drawablePadding="16dp"
                        android:hint="@string/title_hint"
                        android:maxLines="1"
                        android:text="@={viewmodel.title}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_book_pages_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_book_pages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_content_copy_black_24dp"
                        android:ems="10"
                        android:hint="@string/pages_hint"
                        android:inputType="number"
                        android:text="@={viewmodel.totalPages}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_book_start_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_book_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_event_black_24dp"
                        android:ems="10"
                        android:hint="@string/start_date_hint"
                        android:inputType="date"
                        android:text="@={viewmodel.startDate}"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_book_deadline_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_book_deadline_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_event_black_24dp"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/deadline_date_hint"
                        android:inputType="date"
                        android:text="@={viewmodel.deadlineDate}"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </ScrollView>
    </pl.infinitefuture.reading.ScrollChildSwipeRefreshLayout>
</layout>
